--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1067,6 +1067,93 @@
 .dark-mode .user-add-form-wrap-2 .form-group i {
   color: #d7def4 !important;
 }
+.dark-mode .course-name-modal .modal-content {
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-group .form-control {
+  color: #fff !important;
+  border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+  background: rgba(255, 255, 255, 0.05) !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel {
+  border: 1px solid #2D343E !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel:hover {
+  background-color: #7289FF !important;
+  border-color: #7289FF !important;
+  color: #fff !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit {
+  background-color: #7289FF !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit:hover {
+  background-color: #0D0D0D !important;
+  color: #fff !important;
+}
+.dark-mode .back-next-bttns .btn:last-child,
+.dark-mode .back-next-bttns a:last-child {
+  color: #0D0D0D !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt .form-check .form-check-label {
+  color: #d7def4 !important;
+}
+.dark-mode .course-name-modal .modal-content .modal-body .course-name-txt p {
+  color: #66768E !important;
+}
+.dark-mode .notification-box-wrapper .notify-item-box,
+.dark-mode .notification-box-wrapper {
+  border: 1px solid #2D343E !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+}
+.dark-mode .notification-box-wrapper .notify-item-box .media p {
+  color: #66768E !important;
+}
+.dark-mode .delete-item a img {
+  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) !important;
+}
+.dark-mode .line {
+  background-color: #2D343E !important;
+}
+.dark-mode .goto-course-box {
+  border: 1px solid #2D343E !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+}
+.dark-mode .goto-course-box a.go-to-account-course {
+  background-color: #7289FF !important;
+  border-color: #7289FF !important;
+}
+.dark-mode .login-page-theme-box .file-upload-2,
+.dark-mode .login-page-theme-box {
+  border: 1px solid #2D343E !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+}
+.dark-mode .certificate-style-box.login-page-theme-box .media.active {
+  border-color: #7289FF !important;
+}
+.dark-mode .file-upload-area p span {
+  color: #7289FF !important;
+}
+.dark-mode .save-bttns .btn-cancel {
+  border: 1px solid #2D343E !important;
+  background: #0D0D0D !important;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+  color: #66768E !important;
+}
+.dark-mode .user-profile-picture .media span.avatar-box {
+  background-color: #66768E !important;
+  color: #fff !important;
+}
+.dark-mode .form-check-input {
+  background-color: transparent !important;
+  border-color: #fff !important;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
