--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1371,23 +1371,139 @@
     .paid-student-name {
         box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
     }
-    .paid-student-name .txt ul li img{
+
+    .paid-student-name .txt ul li img {
         filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
     }
-    .pay-details-box-invoice .download-inv-box a{
+
+    .pay-details-box-invoice .download-inv-box a {
         background-color: #2F3A4C;
         border-color: #1A1A1A !important;
-        color: #d7def4!important;
+        color: #d7def4 !important;
     }
 
-    .pay-details-box-invoice .download-inv-box a:last-child{
-        background-color: #7289FF!important;
+    .pay-details-box-invoice .download-inv-box a:last-child {
+        background-color: #7289FF !important;
     }
 
-    .user-add-form-wrap-2 .form-group i{
-        color: #d7def4!important;
+    .user-add-form-wrap-2 .form-group i {
+        color: #d7def4 !important;
+    }
+
+    .course-name-modal .modal-content {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-group .form-control {
+        color: #fff !important;
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: rgba(255, 255, 255, 0.05) !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel {
+        border: 1px solid #2D343E !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-cancel:hover {
+        background-color: #7289FF !important;
+        border-color: #7289FF !important;
+        color: #fff !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit {
+        background-color: #7289FF !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-submit .btn-submit:hover {
+        background-color: #0D0D0D !important;
+        color: #fff !important;
+    }
+
+    .back-next-bttns .btn:last-child,
+    .back-next-bttns a:last-child {
+        color: #0D0D0D !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt .form-check .form-check-label {
+        color: #d7def4 !important;
+    }
+
+    .course-name-modal .modal-content .modal-body .course-name-txt p {
+        color: #66768E !important;
+    }
+
+    .notification-box-wrapper .notify-item-box,
+    .notification-box-wrapper {
+        border: 1px solid #2D343E !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+    }
+
+    .notification-box-wrapper .notify-item-box .media p {
+        color: #66768E !important;
+    }
+
+    .delete-item {
+        a {
+            img {
+                filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) !important;
+            }
+        }
+    }
+
+    .line {
+        background-color: #2D343E !important;
+    }
+
+    .goto-course-box {
+        border: 1px solid #2D343E !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+    }
+
+    .goto-course-box a.go-to-account-course {
+        background-color: #7289FF !important;
+        border-color: #7289FF !important;
+    }
+
+    .login-page-theme-box .file-upload-2,
+    .login-page-theme-box {
+        border: 1px solid #2D343E !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+    }
+
+    .certificate-style-box.login-page-theme-box .media.active {
+        border-color: #7289FF !important;
+    }
+
+    .file-upload-area p span {
+        color: #7289FF !important;
+    }
+
+    .save-bttns .btn-cancel { 
+        border: 1px solid #2D343E !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+        color: #66768E!important;
+    }
+
+    .user-profile-picture .media span.avatar-box{
+        background-color: #66768E!important;
+        color: #fff!important;
+    }
+
+    .form-check-input{
+        background-color: transparent!important;
+        border-color: #fff!important;
     }
 }
+
+
 
 
 
