4 auth register page and theme reset done

--- a/public/latest/assets/auth-css/custom-login-3.css
+++ b/public/latest/assets/auth-css/custom-login-3.css
@@ -428,7 +428,7 @@ body.dark-mode .light-ele {
 }
 
 body.dark-mode {
-    background-color: #FFA83F !important;
+    background-color: #0D0D0D !important;
 }
  
 body.dark-mode h3,
