--- a/public/latest/assets/admin-css/style.css
+++ b/public/latest/assets/admin-css/style.css
@@ -197,3 +197,63 @@ body {
 .invalid-feedback {
   display: block !important;
 }
+
+.filter-dropdown-box {
+  position: relative;
+}
+.filter-dropdown-box .dropdown .btn {
+  display: block;
+  width: 100%;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(145, 158, 171, 0.32);
+  background: #FFF;
+  height: 3rem;
+  text-align: left;
+  padding-left: 0.88rem;
+  padding-right: 0.88rem;
+  overflow: hidden;
+  color: #212B36;
+  text-overflow: ellipsis;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0.00413rem;
+}
+.filter-dropdown-box .dropdown .btn:focus {
+  border: 1px solid rgba(145, 158, 171, 0.32) !important;
+}
+.filter-dropdown-box .dropdown .dropdown-menu {
+  border-radius: 0.375rem;
+  background: var(--background-light-paper, #FFF);
+  box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+  width: 100%;
+  margin-top: -5px;
+  transform: translate3d(0px, 49px, 0px) !important;
+  padding: 0.5rem !important;
+}
+.filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item {
+  overflow: hidden;
+  color: var(--neutral-color-neutral-90, #101C2D);
+  text-overflow: ellipsis;
+  whitespace: nowrap;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  padding: 0.25rem 0.35rem !important;
+  margin-top: 0.25rem;
+  border-radius: 0.375rem;
+}
+.filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item:hover {
+  background: var(--neutral-color-neutral-20, #F1F4F9);
+}
+.filter-dropdown-box .dropdown .dropdown-menu li:first-child .dropdown-item {
+  margin-top: 0 !important;
+}
+.filter-dropdown-box i {
+  color: #637381 !important;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
