--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1485,21 +1485,37 @@
         color: #7289FF !important;
     }
 
-    .save-bttns .btn-cancel { 
+    .save-bttns .btn-cancel {
         border: 1px solid #2D343E !important;
         background: #0D0D0D !important;
         box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
-        color: #66768E!important;
+        color: #66768E !important;
     }
 
-    .user-profile-picture .media span.avatar-box{
-        background-color: #66768E!important;
-        color: #fff!important;
+    .user-profile-picture .media span.avatar-box {
+        background-color: #66768E !important;
+        color: #fff !important;
     }
 
-    .form-check-input{
-        background-color: transparent!important;
-        border-color: #fff!important;
+    .form-check-input {
+        background-color: transparent !important;
+        border-color: #fff !important;
+    }
+
+    .filter-dropdown-box .dropdown .dropdown-menu,
+    .filter-dropdown-box .dropdown .btn {
+        border: 1px solid var(--others-dark-stroke, #1A1A1A) !important;
+        background: #0D0D0D !important;
+        color: #fff !important;
+        box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05) !important;
+    }
+
+    .filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item{
+        color: #d7def4;
+    }
+
+    .filter-dropdown-box .dropdown .dropdown-menu li .dropdown-item:hover { 
+        background-color: #66768E !important;
     }
 }
 
