--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,11 +8,12 @@
     width: 100%;
 }
 
-.ligth-ele{
-    display: block!important;
+.ligth-ele {
+    display: block !important;
 }
-.dark-ele{
-    display: none!important;
+
+.dark-ele {
+    display: none !important;
 }
 
 .common-bttn {
@@ -20,7 +21,7 @@
     background: var(--primary-color-blue, #294CFF);
     display: inline-block;
     padding: 0.75rem 1.5rem;
-    color: #FFF; 
+    color: #FFF;
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 500;
@@ -29,10 +30,12 @@
     align-items: center;
     justify-content: center;
     transition: all linear .3s;
-    i{
+
+    i {
         margin-right: 0.5rem;
     }
-    &:hover{
+
+    &:hover {
         background-color: #121212;
         color: #fff;
     }
@@ -112,9 +115,87 @@
     }
 }
 
-.invalid-feedback{
-    display: block!important;
+.invalid-feedback {
+    display: block !important;
 }
+
+
+.filter-dropdown-box {
+    position: relative;
+
+    .dropdown {
+        .btn {
+            display: block;
+            width: 100%;
+            border-radius: 0.5rem;
+            border: 1px solid rgba(145, 158, 171, 0.32);
+            background: #FFF;
+            height: 3rem;
+            text-align: left;
+            padding-left: 0.88rem;
+            padding-right: 0.88rem;
+            overflow: hidden;
+            color: #212B36;
+            text-overflow: ellipsis;
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 140%;
+            letter-spacing: 0.00413rem;
+
+        }
+
+        .btn:focus {
+            border: 1px solid rgba(145, 158, 171, 0.32) !important;
+        }
+
+        .dropdown-menu {
+            border-radius: 0.375rem;
+            background: var(--background-light-paper, #FFF);
+            box-shadow: -20px 20px 40px -4px rgba(145, 158, 171, 0.24), 0px 0px 2px 0px rgba(145, 158, 171, 0.24);
+            width: 100%;
+            margin-top: -5px;
+            transform: translate3d(0px, 49px, 0px) !important;
+            padding: 0.5rem !important;
+
+            li {
+                .dropdown-item {
+                    overflow: hidden;
+                    color: var(--neutral-color-neutral-90, #101C2D);
+                    text-overflow: ellipsis;
+                    whitespace: nowrap;
+                    font-size: 0.875rem;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 1.375rem;
+                    padding: .25rem .35rem !important;
+                    margin-top: 0.25rem;
+                    border-radius: 0.375rem;
+
+                    &:hover { 
+                        background: var(--neutral-color-neutral-20, #F1F4F9);
+                    }
+                }
+
+                &:first-child {
+
+                    .dropdown-item {
+                        margin-top: 0 !important;
+                    }
+                }
+            }
+        }
+    }
+
+    i {
+        color: #637381 !important;
+        position: absolute;
+        right: 15px;
+        top: 15px;
+    }
+
+}
+
 
 // responsive css start
 @include q.responsive(phone) {}
