--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -262,7 +262,7 @@
         background: var(--background-light-paper, #FFF);
         padding: 1rem 0.75rem;
         position: absolute;
-        right: -30%;
+        right: -110%;
         top: -4%;
         width: 110%;
         height: 108%;
@@ -388,8 +388,6 @@
         }
     }
 }
-
-
 
 .common-bttn {
     border-radius: 0.375rem;
@@ -1221,6 +1219,43 @@
 }
 
 
+.hover-item:nth-child(4n) { 
+    .course-single-item{
+        .course-ol-box{
+            right: 100%!important;
+        }
+    } 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1651,6 +1686,29 @@
         width: 100%;
         margin-top: 1rem;
     }
+
+    .hover-item:nth-child(4n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: -110%!important;
+            }
+        } 
+    }
+
+    .hover-item:nth-child(3n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: -110%!important;
+            }
+        } 
+    }
+    .hover-item:nth-child(2n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: 100%!important;
+            }
+        } 
+    }
 }
 
 @include q.responsive(landtablet) {
@@ -1661,6 +1719,22 @@
     .total-client-box {
         margin-bottom: 1rem;
         height: auto;
+    }
+
+    .hover-item:nth-child(4n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: -110%!important;
+            }
+        } 
+    }
+
+    .hover-item:nth-child(3n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: 100%!important;
+            }
+        } 
     }
 }
 
@@ -1673,6 +1747,22 @@
     .total-client-box {
         margin-bottom: 1rem;
         height: auto;
+    }
+
+    .hover-item:nth-child(4n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: -110%!important;
+            }
+        } 
+    }
+
+    .hover-item:nth-child(3n) { 
+        .course-single-item{
+            .course-ol-box{
+                right: 100%!important;
+            }
+        } 
     }
 }
 
