--- a/public/latest/assets/auth-css/auth.css
+++ b/public/latest/assets/auth-css/auth.css
@@ -675,6 +675,61 @@
 /* connect-modal-box */
 
 
+.showing-suggested-username {
+  border-radius: 0.5rem;
+  background: #FFE9D5;
+  padding: 0.5rem 1rem;
+  margin-top: 0.8rem;
+  text-align: left;
+}
+
+.showing-suggested-username img{
+  margin-right: 1rem;
+}
+.showing-suggested-username p {
+  color: #101C2D; 
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem; 
+}
+
+
+.showing-suggested-username a {
+  color: #294CFF; 
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.375rem; 
+  text-decoration: underline;
+  display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 320px) and (max-width: 575px) {
   .auth-form-wrap {
     justify-content: flex-start;
