--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2081,10 +2081,21 @@ span.finsihLesson {
         line-height: 1.375rem;
     }
 }
+ 
+.toggle-box-wrap {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease-out;
+}
 
+.toggle-box-wrap.active {
+    max-height: none;
+}
 
-
-
+.rotate{
+    transform: rotate(180deg);
+    transition: all linear .4s;
+}
 
 
 
