--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -1842,6 +1842,46 @@ span.finsihLesson {
   transition: all linear 0.4s;
 }
 
+.full-page-preview {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0);
+  transition: ease-out 0.3s;
+}
+.full-page-preview img {
+  width: auto !important;
+  height: auto !important;
+}
+
+.full-page-preview.show {
+  transform: scale(1);
+}
+
+.close-bttn {
+  width: 2rem;
+  height: 2rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  background-color: #fff;
+  position: absolute;
+  left: 2rem;
+  top: 2rem;
+}
+.close-bttn i {
+  font-size: 1rem;
+  color: #294CFF;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
