--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2097,8 +2097,45 @@ span.finsihLesson {
     transition: all linear .4s;
 }
 
+.full-page-preview{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0);
+    transition: ease-out .3s;
+    img{
+        width: auto!important;
+        height: auto!important;
+    }
+}
 
+.full-page-preview.show{
+    transform: scale(1);
+}
 
+.close-bttn{
+    width: 2rem;
+    height: 2rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    background-color: #fff;
+    position: absolute;
+    left: 2rem;
+    top: 2rem;
+    i{
+        font-size: 1rem;
+        color: #294CFF;
+    }
+}
 
 
 
