--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -794,6 +794,7 @@ span.finsihLesson {
   justify-content: flex-end;
   align-items: center;
 }
+.page-type .d-flex label,
 .page-type .d-flex a {
   display: inline-flex;
   color: var(--neutral-color-neutral-60, #66768E);
@@ -803,12 +804,15 @@ span.finsihLesson {
   line-height: 1.25rem;
   margin-left: 1rem;
 }
+.page-type .d-flex label img,
 .page-type .d-flex a img {
   margin-right: 0.5rem;
 }
+.page-type .d-flex label.active,
 .page-type .d-flex a.active {
   color: #294CFF;
 }
+.page-type .d-flex label.active img,
 .page-type .d-flex a.active img {
   filter: invert(31%) sepia(87%) saturate(6650%) hue-rotate(233deg) brightness(105%) contrast(101%);
 }
