--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -922,6 +922,7 @@ span.finsihLesson {
         justify-content: flex-end;
         align-items: center;
 
+        label,
         a {
             display: inline-flex;
             color: var(--neutral-color-neutral-60, #66768E);
@@ -936,6 +937,7 @@ span.finsihLesson {
             }
         }
 
+        label.active ,
         a.active {
             color: #294CFF;
 
@@ -2137,7 +2139,12 @@ span.finsihLesson {
     }
 }
 
-
+// .course-content-box.course-page-box{
+//     .dropdown-menu{
+//         top: -50px!important;
+//         left: -100px!important;
+//     }
+// }
 
 
 
