--- a/scss/style.scss
+++ b/scss/style.scss
@@ -196,6 +196,46 @@
 
 }
 
+.no-data-found{
+    background-color: #fff;
+    padding: 2rem;
+    text-align: center;
+    i{
+        color: #294CFF;
+        font-size: 2rem;
+    }
+
+    p{
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.375rem;
+        color: #637381; 
+        margin-top: 0.5rem;
+    }
+}
+
+.fl-main-container .fl-container.fl-flasher.fl-success:not(.fl-rtl) {
+    border-color:  #294CFF!important; 
+}
+
+.fl-main-container .fl-container.fl-flasher.fl-success .fl-title{
+    color: #294CFF!important; 
+}
+
+.fl-main-container .fl-container.fl-success .fl-icon {
+    background-color: #294CFF!important; 
+}
+
+.fl-main-container .fl-container.fl-success .fl-progress-bar {
+    background-color: rgba(41, 77, 255, 0.553)!important; 
+
+    .fl-progress{
+        background-color: #294CFF!important; 
+    }
+}
+
+
 
 // responsive css start
 @include q.responsive(phone) {}
